--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-absl-py==2.1.0
-astunparse==1.6.3
-blinker==1.7.0
+absl-py
+astunparse
+blinker
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -18,7 +18,7 @@ h5py==3.10.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
-keras==2.15.0
+keras
 libclang==16.0.6
 Markdown==3.5.2
 MarkupSafe==2.1.4
@@ -38,10 +38,10 @@ rsa==4.9
 six==1.16.0
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
 termcolor==2.4.0
 typing_extensions==4.9.0
 urllib3==2.1.0
